# create-cpp-app

./: .create.py  .installer.py  CMakeLists.txt  Dockerfile  Makefile  README.md  conanfile.txt  copy.sh  extra.txt  install.sh  scripts.py
.cache/clangd/index/: Student.cpp.F275ED63D79DF3E5.idx  main.cpp.40D799685A12E9DD.idx  raylib.h.C7C6EF36C95E37AE.idx  student.h.D735B234F70DA0E9.idx
.config/: backup.txt  cpx.json  data.json
.config/cold_store/: CMakeCache.txt  cmake_install.cmake  conaninfo.txt
build_sys/: alive.py  bootstrap.py  build.py  change_name.py  data_str.py  docker.py  installers.py  prod.py  tools.py
build_sys/docker_files/: Dockerfile.build
cleaners/: valgrind-out.txt
include/: Helper.h  LinkedList.h  Node.h  adv.h  helper.h  linkedlist.h
lib/: conanbuildinfo.cmake  conanbuildinfo.txt  graph_info.json
src/: Helper.cpp  LinkedList.cpp  Linkedlist.cpp  Node.cpp  adv.cpp  helper.cpp  main.cpp
tests/: CMakeLists.txt  student_test.cpp
